--- a/static/SimStyle.css
+++ b/static/SimStyle.css
@@ -43,35 +43,144 @@
 #edit-pane{
     grid-row: 2;
     display: grid;
+    grid-template-rows: 50px auto;
     grid-template-columns: 200px auto;
 }
 
-#edit-options{
+#edit-banner{
+    grid-row: 1;
+    grid-column: 1 / 3;
+    background: darkslategray;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#edit-menu{
     grid-column: 1;
+    grid-row: 2;
     display: flex;
     flex-direction: column;
 }
 
 #edit-simulation{
+    grid-row: 2;
     grid-column: 2;
+    padding: 15px;
 }
 
+/*                                   World Settings          */
+#edit-world{
+    display: grid;    
+    grid-template-columns: 150px 150px 200px auto;
+}
+#edit-world-labels{
+    text-align: right;
+    grid-column: 1 / 2;
+    display: flex;
+    flex-direction: column;
+}
+#edit-world-values{
+    grid-column: 2 / 3;
+    display: flex;
+    flex-direction: column;
+}
+#edit-world-villagers{
+    grid-column: 3 / 4;
+    display: flex;
+    flex-direction: column;
+    margin-left: 45px;
+}
+
+/*                                     Villages Settings          */
 #edit-villages{
     display: grid;    
-    grid-template-columns: 20px 250px auto;
+    grid-template-columns: 20px 250px 150px 250px auto;
 }
 
 #edit-villages-icons{
-    grid-column: 1;
+    grid-column: 1 / 2;
 }
 
 #edit-villages-list{
-    grid-column: 2;
+    grid-column: 2 / 3;
 }
 
-#edit-villages-data{
-    grid-column: 3;
-}
-#edit-villages-data label{
+#edit-villages-labels{
     text-align: right;
+    grid-column: 3 / 4;
+    display: flex;
+    flex-direction: column;
+}
+
+#edit-villages-values{
+    grid-column: 4 / 5;
+    display: flex;
+    flex-direction: column;
+}
+
+/*                                   Villagers Settings          */
+#edit-villagers{
+    display: grid;    
+    grid-template-columns: 150px 25px 1000px auto;
+}
+#edit-villagers-labels{
+    text-align: right;
+    grid-column: 1 / 2;
+    display: flex;
+    flex-direction: column;
+}
+#edit-villagers-values{
+    grid-column: 3 / 4;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+/*                                   Locations Settings          */
+#edit-locations{
+    display: grid;    
+    grid-template-columns: 150px 25px 500px auto;
+}
+#edit-locations-labels{
+    text-align: right;
+    grid-column: 1 / 2;
+    display: flex;
+    flex-direction: column;
+}
+#edit-locations-values{
+    grid-column: 3 / 4;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/*                                   Buildings Settings          */
+#edit-buildings{
+    display: grid;    
+    grid-template-columns: 150px 25px 1000px auto;
+}
+#edit-buildings-labels{
+    text-align: right;
+    grid-column: 1 / 2;
+    display: flex;
+    flex-direction: column;
+}
+#edit-buildings-values{
+    grid-column: 3 / 4;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+/*                                    Class Settings          */
+.flex-row-gap {
+    margin-left: 5px;
+    margin-right: 5px;
 }
